# ROB10

./: README.md  calibration_results.npz  camera_calibration_charuco.npz  depth_values.txt  new_camera_calibration_charuco.npz  output.txt  setup_ros_env.sh
BlenderProc/: post_process_blender_proc.py  random_sence.py
BlenderProc/output/: 0.hdf5
CAD/: cardboard.glb  cardboard_box.mtl  cardboard_box_v2.mtl  ur5_pape_mount_v1_test.STL
Camera Calibration/: calibration._intel.py  charuco_calibration.py  extr_camtest.py  extr_test_2.py  extrinsic_camera_calibration.py  perplex_undistor.py  process_extrinsic.py
Camera Calibration/Extrinsic_Parameters/: extrinsic_70_poses.txt  extrinsic_v1.txt
Camera Calibration/Transforms/: transform_optical_to_intel.py
Camera Calibration/test_extrinsic/: ext.py
Object Detection/Code/: convert_from_coco_to_yolo.py  pnp_ransac.py  pose_est_np.py  run_fast_sam.py  run_yolov11.py  run_yolov11_folder.py  train_yolo11.py
calibration_50_images/: transform_001.txt  transform_002.txt  transform_003.txt  transform_004.txt  transform_005.txt  transform_006.txt  transform_007.txt  transform_008.txt  transform_009.txt  transform_010.txt  transform_011.txt  transform_012.txt  transform_013.txt  transform_014.txt  transform_015.txt  transform_016.txt  transform_017.txt  transform_018.txt  transform_019.txt  transform_020.txt  transform_021.txt  transform_022.txt  transform_023.txt  transform_024.txt  transform_025.txt  transform_026.txt  transform_027.txt  transform_028.txt  transform_029.txt  transform_030.txt  transform_031.txt  transform_032.txt  transform_033.txt  transform_034.txt  transform_035.txt  transform_036.txt  transform_037.txt  transform_038.txt  transform_039.txt  transform_040.txt  (+30 more)
calibration_data/: transform_001.txt  transform_002.txt  transform_003.txt  transform_004.txt  transform_005.txt  transform_006.txt  transform_007.txt  transform_008.txt  transform_009.txt  transform_010.txt  transform_011.txt  transform_012.txt  transform_013.txt  transform_014.txt  transform_015.txt  transform_016.txt  transform_017.txt  transform_018.txt  transform_019.txt  transform_020.txt
color_to_base_tf/: check_tf.py  npz_to_txt.py  transformed_points_homogeneous.npy
image_processor/: package.xml  setup.cfg  setup.py
lang/lang_scripts/: lang_predict.py
lang_sam_interfaces/: CMakeLists.txt  package.xml
lang_sam_interfaces/srv/: SegmentImage.srv
lang_sam_ros/: package.xml  setup.cfg  setup.py
lang_sam_ros/lang_sam_ros/: lang_sam_client.py  lang_sam_server.py
moveit_ur/: CMakeLists.txt  package.xml
moveit_ur/config/: realsense_default.rviz
moveit_ur/launch/: get_tcp_pose.launch.py  move_to_pose.launch.py  rintel_rviz.launch.py
moveit_ur/src/: get_tcp_pose.cpp  minimal.cpp  move_to_pose_movegroup.cpp  moveit_group_interface_ur.cpp  moveit_ur.cpp
ollama_ros/: package.xml  setup.cfg  setup.py
ollama_ros/ollama_ros/: ollama_action_client.py  ollama_action_server.py
ollama_ros_interfaces/: CMakeLists.txt  package.xml
ollama_ros_interfaces/action/: ProcessThinking.action
output/: 0.hdf5
pose_estimation/: package.xml  setup.cfg  setup.py
pose_estimation/pose_estimation/: depth_consistency.py  pose_estimation_client.py  pose_estimation_server.py
pose_estimation_interfaces/: CMakeLists.txt  package.xml
pose_estimation_interfaces/srv/: PoseEstimation.srv
stack_optimization/: stack_optimize.py
stack_optimization_interfaces/: CMakeLists.txt  package.xml
stack_optimization_interfaces/msg/: BoxInfo.msg  BoxState.msg
stack_optimization_interfaces/srv/: StackOptimizer.srv
stack_optimization_ros/: package.xml  setup.cfg  setup.py
stack_optimization_ros/stack_optimization_ros/: stack_optimizer_client.py  stack_optimizer_server.py  stack_optimizer_visualization.py
ur10_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10_gripper_moveit_config/config/: moveit_controllers.yaml  ros2_controllers.yaml  ur_gripper.srdf
ur10_gripper_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py
ur10_mtc_demo/: CMakeLists.txt  package.xml
ur10_mtc_demo/launch/: cartesian_path_mtc.launch.py  minimal_task.launch.py  pick_and_place.launch.py  ur10_mtc_demo.launch.py
ur10_mtc_demo/src/: cartesian_path_mtc.cpp  minimal_task.cpp  mtc_node.cpp  pick_and_place.cpp
ur_gripper_control/: CMakeLists.txt  package.xml
ur_gripper_control/config/: my_robot_calibration.yaml  ros2_controllers.yaml
ur_gripper_control/launch/: rsp.launch.py  start_robot.launch.py
ur_gripper_control/urdf/: ur_gripper_controlled.urdf.xacro
ur_gripper_description/: CMakeLists.txt  package.xml
ur_gripper_description/launch/: view_robot.launch.py
ur_gripper_description/meshes/: quick_changer.dae
ur_gripper_description/rviz/: urdf.rviz
ur_gripper_description/urdf/: ur_gripper.urdf.xacro  ur_gripper_macro.xacro
ur_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur_gripper_moveit_config/config/: controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  ur_gripper.ros2_control.xacro  ur_gripper.srdf
ur_gripper_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py  ur_gripper_moveit.launch.py
ur_new_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur_new_moveit_config/config/: moveit_controllers.yaml  sensors_3d.yaml  ur_gripper.srdf  ur_servo.yaml
ur_new_moveit_config/launch/: move_group.launch.py  move_servo.launch.py  move_servo_v2.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py
ur_test_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur_test_moveit_config/config/: moveit_controllers.yaml  ur_gripper.srdf  ur_gripper.urdf.xacro
ur_test_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py
vg10/: interface.py  modbus.py
vg10_control/: package.xml  setup.cfg  setup.py
vg_control_interfaces/: CMakeLists.txt  package.xml
(+18 files in other folders)
