<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_ur</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cankhjorth@gmail.com">christian</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend> pose_estimation_interfaces</depend>
  <depend>vg_control_interfaces</depend>
  <depend>stack_optimization_interfaces</depend>
   
  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rviz2</exec_depend>

  
  <exec_depend>moveit_configs_utils</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
